--- a/RestAssured/pom.xml
+++ b/RestAssured/pom.xml
@@ -45,6 +45,12 @@
 			<version>1.18.34</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
