--- a/RestAssured/pom.xml
+++ b/RestAssured/pom.xml
@@ -51,6 +51,17 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.17.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
