--- a/RestAssured/pom.xml
+++ b/RestAssured/pom.xml
@@ -63,5 +63,12 @@
 			<version>2.17.2</version>
 		</dependency>
 
+		<!-- OAUTH 1.0 -->
+		<dependency>
+			<groupId>com.github.scribejava</groupId>
+			<artifactId>scribejava-core</artifactId>
+			<version>2.5.3</version>
+		</dependency>
+
 	</dependencies>
 </project>
